@@ -1,2 +1,2 @@
-SUBDIRS = tokenizer src
+SUBDIRS = tokenizer src lib
 EXTRA_DIST = include
