@@ -133,4 +133,5 @@ tgdb/annotate-two/Makefile tgdb/annotate-two/src/Makefile \
 tgdb/gdbmi/Makefile tgdb/gdbmi/src/Makefile \
 tgdb/tgdb-base/Makefile tgdb/tgdb-base/src/Makefile \
 cgdb/Makefile cgdb/src/Makefile \
+cgdb/lib/Makefile cgdb/lib/kui/Makefile cgdb/lib/kui/src/Makefile \
 cgdb/tokenizer/Makefile cgdb/tokenizer/src/Makefile)
